api-redirection, add new APIs, remove token API

--- a/content/data/account-aggregator/api-integration/account-availability-apis.mdx
+++ b/content/data/account-aggregator/api-integration/account-availability-apis.mdx
@@ -13,7 +13,7 @@ The Account Availability Check API enables Financial Information Users (FIUs) to
 
 ### Authentication
 
-FIUs must use [Auth Mechanism](/data/account-aggregator/api-reference#/operation~getToken) to obtain an access token for authentication. Include the access token in the Authorization header of each request.
+FIUs must use [Auth Mechanism](/data/account-aggregator/api-reference#/operation~getToken) to obtain an access token for authentication. Include the access token in the Authorization header of some requests.
 
 <hr class="primary" />
 
