cou-v2-migration-guide

--- a/content/payments/billpay/api-integration/webhooks.mdx
+++ b/content/payments/billpay/api-integration/webhooks.mdx
@@ -53,62 +53,6 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
         },
         "billerRefId": "9540207519",
         "exactness": "Exact",
-        "paymentLimits": [
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "Internet Banking",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "Debit Card",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "Prepaid Card",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "IMPS",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 4999900,
-                "minLimit": 100,
-                "paymentMode": "Cash",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "UPI",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "Wallet",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "NEFT",
-                "supportsPendingStatus": false
-            },
-            {
-                "maxLimit": 99999900,
-                "minLimit": 100,
-                "paymentMode": "AEPS",
-                "supportsPendingStatus": false
-            }
-        ],
         "refId": "CJLJBQK91PA0FD9MPMK0W75BD9M32391709",
         "status": "Success"
     }
@@ -384,84 +328,7 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
             "SupportBillValidation": "",
             "SupportDeemed": "",
             "SupportPendingStatus": "",
-            "NameVector": "'mum':3 'pwr':2 'tata':1 'tv':5 'zee':4",
-            "Plans": [
-                {
-                    "ID": 773944272117303200,
-                    "PlanID": "1",
-                    "AmountInRupees": "99.0",
-                    "BillerID": "ZEE500000NAT01",
-                    "CategorySubType": {
-                        "subType": "1 Month"
-                    },
-                    "CategoryType": "Premium",
-                    "EffctvFrom": "2021-01-01",
-                    "EffctvTo": "2021-12-31",
-                    "PlanAdditionalInfo": [],
-                    "PlanDescription": "All ZEE5 Originals and Exclusives, Blockbuster Movies, All ALT Balaji Shows, Zindagi TV Shows,\nKids, Live TV, TV shows before telecast. Watch on 5 devices at a time",
-                    "Status": "ACTIVE"
-                },
-                {
-                    "ID": 773944272134080400,
-                    "PlanID": "2",
-                    "AmountInRupees": "299.0",
-                    "BillerID": "ZEE500000NAT01",
-                    "CategorySubType": {
-                        "subType": "2 Months"
-                    },
-                    "CategoryType": "Premium",
-                    "EffctvFrom": "2021-01-01",
-                    "EffctvTo": "2021-12-31",
-                    "PlanAdditionalInfo": [],
-                    "PlanDescription": "All ZEE5 Originals and Exclusives, Blockbuster Movies, All ALT Balaji Shows, Zindagi TV Shows,\nKids, Live TV, TV shows before telecast. Watch on 5 devices at a time",
-                    "Status": "ACTIVE"
-                },
-                {
-                    "ID": 773944272142469000,
-                    "PlanID": "3",
-                    "AmountInRupees": "599.0",
-                    "BillerID": "ZEE500000NAT01",
-                    "CategorySubType": {
-                        "subType": "6 Months"
-                    },
-                    "CategoryType": "Premium",
-                    "EffctvFrom": "2021-01-01",
-                    "EffctvTo": "2021-12-31",
-                    "PlanAdditionalInfo": [],
-                    "PlanDescription": "All ZEE5 Originals and Exclusives, Blockbuster Movies, All ALT Balaji Shows, Zindagi TV Shows,\nKids, Live TV, TV shows before telecast. Watch on 5 devices at a time",
-                    "Status": "ACTIVE"
-                },
-                {
-                    "ID": 773944272159246300,
-                    "PlanID": "4",
-                    "AmountInRupees": "999.0",
-                    "BillerID": "ZEE500000NAT01",
-                    "CategorySubType": {
-                        "subType": "12 Months"
-                    },
-                    "CategoryType": "Premium",
-                    "EffctvFrom": "2021-01-01",
-                    "EffctvTo": "2021-12-31",
-                    "PlanAdditionalInfo": [],
-                    "PlanDescription": "All ZEE5 Originals and Exclusives, Blockbuster Movies, All ALT Balaji Shows, Zindagi TV Shows,\nKids, Live TV, TV shows before telecast. Watch on 5 devices at a time",
-                    "Status": "ACTIVE"
-                },
-                {
-                    "ID": 773944272167635000,
-                    "PlanID": "5",
-                    "AmountInRupees": "365.0",
-                    "BillerID": "ZEE500000NAT01",
-                    "CategorySubType": {
-                        "subType": "12 Months"
-                    },
-                    "CategoryType": "Club",
-                    "EffctvFrom": "2021-01-01",
-                    "EffctvTo": "2021-12-31",
-                    "PlanAdditionalInfo": [],
-                    "PlanDescription": "TV shows before telecast, Select ZEE5 Originals, Select ALT Balaji Shows, Select Movies, Zindagi\nTV Shows, Kids, Live TV. Watch on 2 devices at a time",
-                    "Status": "ACTIVE"
-                }
-            ]
+            "NameVector": "'mum':3 'pwr':2 'tata':1 'tv':5 'zee':4"
         }
     ]
 }`}
