Compile menuItems.json

--- a/content/payments/billpay/api-integration/v2-migration.mdx
+++ b/content/payments/billpay/api-integration/v2-migration.mdx
@@ -5,7 +5,7 @@ order: 5
 visible_in_sidebar: true
 ---
 
-The changes below will help you paln your migration from V1 to V2 specs.
+The changes below will help you plan your migration from V1 to V2 specs.
 
 
 ## Core APIs
