--- a/content/payments/billpay/mobile-prepaid-recharge/quickstart.mdx
+++ b/content/payments/billpay/mobile-prepaid-recharge/quickstart.mdx
@@ -8,34 +8,24 @@ visible_in_sidebar: true
 ## Overview
 
 ##### What is prepaid recharge?
+
 Prepaid recharge is the process of adding credit or balance to a prepaid mobile phone account. This allows users to continue using mobile services such as calls, text messages, and data without a fixed monthly contract.
 
 ##### Who are the operators?
+
 Operators are the mobile network service providers that offer prepaid services to their customers. Our API supports recharges for major operators in India.
 
 ###### The API follows a simple, intuitive flow:
 
-- For plan fetching : 
-** Input mobile number → Validate → Retrieve plans → Display information**
+- For plan fetching :
+  ** Input mobile number → Validate → Retrieve plans → Display information**
 
-- For recharges : 
- ** Initiate recharge → Process payment → Confirm transaction →  instant top-ups across multiple mobile operators ** 
+- For recharges :
+  ** Initiate recharge → Process payment → Confirm transaction → instant top-ups across multiple mobile operators **
 
-
-<Row>
-   
-    <Portion desktopSpan="16">
-        <img
-            style={{ marginTop: "0" }}
-            src="https://docs-asset-prepaid-recharge.s3.ap-south-1.amazonaws.com/flow.png"
-        />
-    </Portion>
-</Row>
+<img src="https://docs-asset-prepaid-recharge.s3.ap-south-1.amazonaws.com/flow.png" />
 
 <hr class="tertiary" />
-
-
-
 
 **Fetch API** : The Fetch API simplifies the process of validating mobile numbers and identifying associated operators and circles. By integrating this API, partners can seamlessly verify customer mobile numbers and fetch the relevant operator-specific plans, streamlining the recharge process.
 
@@ -44,20 +34,22 @@ Operators are the mobile network service providers that offer prepaid services t
 **Check Balance API** : The Check Balance API enables partners to fetch the current balance information of their Recharge API account. This ensures partners can monitor their account balance in real-time and maintain sufficient funds for processing transactions.
 
 ### Authentication:
-The API uses authentication mechanisms that allow access only to authorized partners. Each partner is provided with:
-- **Access Keys**: Specific to each partner for secure authentication. 
-Reach out to sales@setu.co to get your keys. 
 
+The API uses authentication mechanisms that allow access only to authorized partners. Each partner is provided with:
+
+- **Access Keys**: Specific to each partner for secure authentication.
+  Reach out to sales@setu.co to get your keys.
 
 ### Contact & Support:
+
 For any issues or inquiries regarding the integration, contact support at **support@setu.co**.
 
 <NextPage
-    info={{
-        description: "Easy integration for Mobile Recharge APIs",
-        slug: "/payments/prepaid-recharge/api-reference",
-        title: "API Reference",
-    }}
+  info={{
+    description: "Easy integration for Mobile Recharge APIs",
+    slug: "/payments/prepaid-recharge/api-reference",
+    title: "API Reference",
+  }}
 />
 
 <WasPageHelpful />
