fixed typo error

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -738,7 +738,7 @@ This API retrieves the last data fetch status for a given consent ID. It provide
         },
         {
           key: "4",
-          label: <Badge type="failure">FAIL - No Date Sessions Fetched yet</Badge>,
+          label: <Badge type="failure">FAIL - No Data Sessions Fetched yet</Badge>,
           content: (
             <>
               <h5>Response</h5>
