Add better context to the migration guide

--- a/content/payments/billpay/api-integration/v2-migration.mdx
+++ b/content/payments/billpay/api-integration/v2-migration.mdx
@@ -1,15 +1,17 @@
 ---
-sidebar_title: Migration Guide to V2
-page_title: BBPS COU — Migration Guide to V2
+sidebar_title: Migration Guide to v2
+page_title: BBPS COU — Migration Guide to v2
 order: 5
 visible_in_sidebar: true
 ---
 
-The changes below will help you plan your migration from V1 to V2 specs.
+## Migration guide to v2
 
-## Core APIs
+The changes below will help you plan your migration from v1 to v2 specs.
 
 ### Bill Fetch Request
+
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchRequestV2" target="_blank">API</a>
 
 | Type | Old                       | New                       |
 | ---- | ------------------------- | ------------------------- |
@@ -47,6 +49,8 @@ The changes below will help you plan your migration from V1 to V2 specs.
 `}</CodeBlockWithCopy>
 
 ### Bill Fetch Response
+
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~Fetch/operation~FetchResponseV2" target="_blank">API</a>
 
 | Type | Old                  | New            |
 | ---- | -------------------- | -------------- |
@@ -89,6 +93,8 @@ The changes below will help you plan your migration from V1 to V2 specs.
 </CodeBlockWithCopy>
 
 ### Bill Pay Request
+
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~Pay/operation~PaymentRequestV2" target="_blank">API</a>
 
 | Type | Old                       | New                       |
 | ---- | ------------------------- | ------------------------- |
@@ -152,11 +158,13 @@ The changes below will help you plan your migration from V1 to V2 specs.
 
 ### Bill Pay response
 
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~Pay/path~/api/v2/bbps/bills/payment/response/post" target="_blank">API</a>
+
 | Type | Old                 | New |
 | ---- | ------------------- | --- |
 | Body | `data.refundStatus` |     |
 
-<br/>
+<br />
 
 <CodeBlockWithCopy language="diff">{`
 {
@@ -186,11 +194,13 @@ The changes below will help you plan your migration from V1 to V2 specs.
 
 ### Bill Dispute request
 
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~Dispute/operation~DisputeRequestV2" target="_blank">API</a>
+
 | Type | Old              | New             |
 | ---- | ---------------- | --------------- |
 | Body | `txnReferenceId` | `transactionId` |
 
-<br/>
+<br />
 
 <CodeBlockWithCopy language="diff">{`
 {
@@ -201,9 +211,9 @@ The changes below will help you plan your migration from V1 to V2 specs.
 }
 `}</CodeBlockWithCopy>
 
-## List APIs
-
 ### List Billers
+
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~List/operation~getBillersV2" target="_blank">API</a>
 
 | Type             | Old              | New            |
 | ---------------- | ---------------- | -------------- |
@@ -218,7 +228,7 @@ The changes below will help you plan your migration from V1 to V2 specs.
 + GET /billers?categoryName=Loan+Repayment
 `}</CodeBlockWithCopy>
 
-<br/>
+<br />
 
 <CodeBlockWithCopy language="diff">{`
 {
@@ -274,6 +284,8 @@ The changes below will help you plan your migration from V1 to V2 specs.
 
 ## List Disputes
 
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~List/operation~getDisputesV2" target="_blank">API</a>
+
 | Type            | Old                    | New             |
 | --------------- | ---------------------- | --------------- |
 | Query Parameter | `partnerRefIds`        | `paymentRefIds` |
@@ -281,14 +293,14 @@ The changes below will help you plan your migration from V1 to V2 specs.
 | Body            | `customerMobileNumber` | `mobile`        |
 | Body            | `partnerRefId`         | `paymentRefId`  |
 
-<br/>
+<br />
 
 <CodeBlockWithCopy language="diff">{`
 - GET /disputes?partnerRefIds=N2001121212344&customerMobileNumber=9505987798
 + GET /disputes?paymentRefIds=N2001121212344&mobile=9505987798
 `}</CodeBlockWithCopy>
 
-<br/>
+<br />
 
 <CodeBlockWithCopy language="diff">{`
 {
@@ -318,12 +330,14 @@ The changes below will help you plan your migration from V1 to V2 specs.
 
 ### List transactions
 
+Following changes were made to this <a href="https://docs.setu.co/payments/billpay/api-integration/api-reference#/category~List/operation~getTxnsV2" target="_blank">API</a>
+
 | Type | Old                    | New            |
 | ---- | ---------------------- | -------------- |
 | Body | `customerMobileNumber` | `mobile`       |
 | Body | `partnerRefId`         | `paymentRefId` |
 
-<br/>
+<br />
 
 <CodeBlockWithCopy language="diff">{`
 {
